2007-07-17  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/jpeg/jpeg-exif.c (jpeg_setup_exif_for_save): include
	GIMP version number in the EXIF "software" tag.  This makes it
	easier to debug issues related to metadata.

2007-07-17  Sven Neumann  <sven@gimp.org>

	* app/core/gimp.c (gimp_finalize): free the context list.

	* app/tools/gimprectangleoptions.c (gimp_rectangle_options_gui):
	removed unused vbox.

2007-07-17  Simon Budig  <simon@gimp.org>

	* app/text/gimptext-private.h
	* app/text/gimptextlayout.c
	* app/text/gimptextlayout-render.c: Fix text rendering for xres != yres.

2007-07-17  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpmenudock.c (gimp_menu_dock_new): unref the context.

2007-07-17  Sven Neumann  <sven@gimp.org>

	* app/core/gimptoolinfo.c (gimp_tool_info_new): use the tool-info
	identifier as the name of the tool-options object.

	* app/paint/gimppaintoptions.c (gimp_paint_options_new): use the
	paint-info identifier as the name of the paint-options object.

	* app/paint/gimp-paint.c (gimp_paint_register): added parameter check.

	* app/tools/gimp-tools.c (gimp_tools_init): formatting.

2007-07-17  Sven Neumann  <sven@gimp.org>

	* app/plug-in/gimppluginprocedure.c
	(gimp_plug_in_procedure_set_file_proc): plugged tiny memory leak.

	* libgimpcolor/gimprgb.c (gimp_rgb_min) (gimp_rgb_max): formatting.

2007-07-17  Sven Neumann  <sven@gimp.org>

	* libgimpconfig/gimpconfigwriter.c (gimp_config_writer_finish):
	don't free the writer struct too early.

2007-07-16  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-new.c (gimp_image_new_get_last_template): sync
	with the default template. Fixes bug #457286.

2007-07-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/uri/uri.c
	* plug-ins/uri/uri-backend.h: get the procedure help strings from
	the backend abstraction.

	* plug-ins/uri/uri-backend-gnomevfs.c
	* plug-ins/uri/uri-backend-libcurl.c
	* plug-ins/uri/uri-backend-wget.c: provide help strings.

2007-07-16  Sven Neumann  <sven@gimp.org>
